# ChangeLog for dev-libs/link-grammar
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/ChangeLog,v 1.5 2005/11/02 10:50:35 herbs Exp $

  02 Nov 2005; Herbie Hopkins <herbs@gentoo.org> link-grammar-4.1.3.ebuild:
  Marked ~amd64 wrt bug #110858.

  31 Oct 2005; Brent Baude <ranger@gentoo.org> link-grammar-4.1.3.ebuild:
  marking link-grammar-4.1.3 ~ppc64 in support of bug 110858

  31 Oct 2005; Jason Wever <weeve@gentoo.org> link-grammar-4.1.3.ebuild:
  Added ~sparc keyword wrt bug #110858.

  30 Oct 2005; Luca Barbato <lu_zero@gentoo.org> link-grammar-4.1.3.ebuild:
  Marked ~ppc

*link-grammar-4.1.3 (29 Oct 2005)

  29 Oct 2005; Joe McCann <joem@gentoo.org> +link-grammar-4.1.3.ebuild:
  First release into the tree. The Link Grammar Parser is a syntactic parser
  of English, based on link grammar, an original theory of English syntax. The
  system is written in generic C code, and runs on any platform with a C
  compiler.
