@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/Attic/link-grammar-4.1.3.ebuild,v 1.5 2005/11/02 10:50:35 herbs Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/Attic/link-grammar-4.1.3.ebuild,v 1.6 2006/02/22 00:16:03 agriffis Exp $
 
 DESCRIPTION=" The Link Grammar Parser is a syntactic parser of English, based on
 link grammar, an original theory of English syntax."
@@ -9,7 +9,7 @@ SRC_URI="http://www.abisource.com/downloads/link-grammar/${PV}/${P}.tar.gz"
 
 LICENSE="as-is"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE=""
 
 #broken make files :-/
