@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/link-grammar
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/ChangeLog,v 1.5 2005/11/02 10:50:35 herbs Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/ChangeLog,v 1.6 2006/02/22 00:16:03 agriffis Exp $
+
+  22 Feb 2006; Aron Griffis <agriffis@gentoo.org> link-grammar-4.1.3.ebuild:
+  Mark 4.1.3 ~ia64
 
   02 Nov 2005; Herbie Hopkins <herbs@gentoo.org> link-grammar-4.1.3.ebuild:
   Marked ~amd64 wrt bug #110858.
